syntax = "proto3";

package contestant.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/ictsc/ictsc-regalia/backend/pkg/proto/contestant/v1;contestantv1";

enum Phase {
  PHASE_UNSPECIFIED = 0;
  PHASE_OUT_OF_CONTEST = 1;
  PHASE_IN_CONTEST = 2;
  PHASE_BREAK = 3;
  PHASE_AFTER_CONTEST = 4;
}

message Schedule {
  Phase phase = 1;
  Phase next_phase = 2;
  google.protobuf.Timestamp start_at = 3;
  optional google.protobuf.Timestamp end_at = 4;
}

message Rule {
  string markdown = 1;
}

message GetScheduleRequest {}
message GetScheduleResponse {
  Schedule schedule = 1;
}

message GetRuleRequest {}
message GetRuleResponse {
  Rule rule = 1;
}

service ContestService {
  rpc GetSchedule(GetScheduleRequest) returns (GetScheduleResponse);
  rpc GetRule(GetRuleRequest) returns (GetRuleResponse);
}
